[workspace]
members = [
    "./day1",
    "./day2",
    "./day3",
    "./day4",
    "./day5",
    "./day6",
    "./day7",
    "./day8",
    "./day9",
    "./day10",
    "./day11",
    "./day12",
    "./day13",
    "./day14",
    "./day15",
    "./day16",
    "./day17",
    "./day18",
    "./day19",
    "./day20",
    "./day21",
    "./day22",
    "./day23",
    "./day24",
    "./day25",
]
default-members = [
    "./day1",
    "./day2",
    "./day3",
    "./day4",
    "./day5",
    "./day6",
    "./day7",
    "./day8",
    "./day9",
    "./day10",
    "./day11",
    "./day12",
    "./day13",
    "./day14",
    "./day15",
    "./day16",
    "./day17",
    "./day18",
    "./day19",
    "./day20",
    "./day21",
    "./day22",
    "./day23",
    "./day24",
    "./day25",
]

resolver = "2"

[profile.test]
opt-level = 3

[profile.bench]
debug = true

[workspace.dependencies]
clap = { version = "~4.0", features = ["derive", "wrap_help"] }
color-eyre = { version = "0.6.5", default-features = false }
strum = "0.24.1"
strum_macros = "0.26.4"
grid = { git = "https://github.com/jmchacon/advent.git" }
idna = "1.0.0"
itertools = "0.10.5"
slab_tree = "0.3.2"

[workspace.package]
edition = "2021"
rust-version = "1.81"
authors = ["James Chacon <chacon.james@gmail.com>"]

