[package]
name = "day7"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
slab_tree = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
itertools = { workspace = true }
grid = { workspace = true }
